--- a/index.html
+++ b/index.html
@@ -164,6 +164,21 @@
       <section class="news-section">
         <div class="main-width">
           <h2>News</h2>
+          <div class="news-slider">
+            <div class="news-nav">
+              <button class="news-prev">
+                <img src="images/symbol/chevron-white.svg" alt="" />
+              </button>
+              <button class="news-next">
+                <img src="images/symbol/chevron-white.svg" alt="" />
+              </button>
+            </div>
+            <div class="news-wrapper">
+              <!-- <div class="news-item"></div>
+              <div class="news-item"></div>
+              <div class="news-item"></div> -->
+            </div>
+          </div>
         </div>
       </section>
       <section class="procurement-section">
