--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
           </div>
         </div>
       </section>
-      <section class="governance-section"></section>
+      <section class="governance-section">
+        <div class="pie-container"></div>
+      </section>
       <section class="resources-section">
         <div class="main-width">
           <h2>Resources</h2>
@@ -184,6 +186,60 @@
       <section class="procurement-section">
         <div class="main-width">
           <h2>Procurement 4.0</h2>
+          <div class="proc-wrapper">
+            <div class="proc-tabs">
+              <div id="proc-1">Objectives</div>
+              <div id="proc-2" class="active">Steering Committee Purpose</div>
+              <div id="proc-3">Steering Committee Members</div>
+              <div id="proc-4">Work Streams</div>
+            </div>
+            <div class="proc-content">
+              <div id="proc-content-1">
+                <div>
+                  <img src="images/proc/one.png" alt="" />
+                  <div class="obj-text">
+                    <h5>Increase Resilience</h5>
+                    <p>
+                      Procurement and Supply Chain Transformation can increase
+                      the resilience of an organization. By tightly integrating
+                      procurement and supply chain functions, companies can
+                      better support supply chain functions when disruptions
+                      occur, or even prevent disruptions through early action.
+                    </p>
+                  </div>
+                </div>
+                <div>
+                  <img src="images/proc/two.png" alt="" />
+                  <div class="obj-text">
+                    <h5>Operational Efficiency</h5>
+                    <p>
+                      The convergence of procurement and supply chain enables
+                      organizations to develop new operational efficiencies.
+                      This shift allows companies to build resilience, mitigate
+                      supply-chain risk, and drive innovation.
+                    </p>
+                  </div>
+                </div>
+                <div>
+                  <img src="images/proc/three.png" alt="" />
+                  <div class="obj-text">
+                    <h5>Increase Resilience</h5>
+                    <p>
+                      Procurement and Supply Chain Transformation can increase
+                      the resilience of an organization. By tightly integrating
+                      procurement and supply chain functions, companies can
+                      better support supply chain functions when disruptions
+                      occur, or even prevent disruptions through early action.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div id="proc-content-2"></div>
+              <div id="proc-content-3"></div>
+              <div id="proc-content-4"></div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
