--- a/index.html
+++ b/index.html
@@ -118,7 +118,46 @@
         </div>
       </section>
       <section class="governance-section">
-        <div class="pie-container"></div>
+        <div class="pie-container">
+          <div class="circle"></div>
+          <div class="center">Governance</div>
+          <a class="slice" id="slice-1">
+            <div class="slice-text">
+              <img src="images/gov/procedure.png" alt="" />
+              Procedures
+            </div>
+          </a>
+          <a class="slice" id="slice-2">
+            <div class="slice-text">
+              <img src="images/gov/process.png" alt="" />
+              Processes
+            </div>
+          </a>
+          <a class="slice" id="slice-3">
+            <div class="slice-text">
+              <img src="images/gov/contract.png" alt="" />
+              Contract Governance Committee
+            </div>
+          </a>
+          <a class="slice" id="slice-4">
+            <div class="slice-text">
+              <img src="images/gov/plan.png" alt="" />
+              Procurement Planning
+            </div>
+          </a>
+          <a class="slice" id="slice-5">
+            <div class="slice-text">
+              <img src="images/gov/fdp.png" alt="" />
+              FDP
+            </div>
+          </a>
+          <a class="slice" id="slice-6">
+            <div class="slice-text">
+              <img src="images/gov/policy.png" alt="" />
+              Policy
+            </div>
+          </a>
+        </div>
       </section>
       <section class="resources-section">
         <div class="main-width">
@@ -188,8 +227,8 @@
           <h2>Procurement 4.0</h2>
           <div class="proc-wrapper">
             <div class="proc-tabs">
-              <div id="proc-1">Objectives</div>
-              <div id="proc-2" class="active">Steering Committee Purpose</div>
+              <div id="proc-1" class="active">Objectives</div>
+              <div id="proc-2">Steering Committee Purpose</div>
               <div id="proc-3">Steering Committee Members</div>
               <div id="proc-4">Work Streams</div>
             </div>
