Proc section - steering committees

--- a/index.html
+++ b/index.html
@@ -274,8 +274,126 @@
                 </div>
               </div>
 
-              <div id="proc-content-2"></div>
-              <div id="proc-content-3"></div>
+              <div id="proc-content-2">
+                <div>
+                  <div class="big gray">
+                    <img src="images/symbol/person-starburst.svg" alt="" />
+                    <p>
+                      Provide Strategic Direction, Set out the Vision, ensuring
+                      it aligns with Organization Mission and Strategic Plan
+                    </p>
+                  </div>
+                  <div class="small blue">
+                    <img src="images/symbol/key.svg" alt="" />
+                    <p>Decision on Key Issues throughout the Project Journey</p>
+                  </div>
+                </div>
+                <div>
+                  <div class="small green">
+                    <img src="images/symbol/clipboard-search.svg" alt="" />
+                    <p>
+                      Ensuring Risks are Identified and Managed and Mitigated
+                    </p>
+                  </div>
+                  <div class="big purple">
+                    <img src="images/symbol/arrow-trending.svg" alt="" />
+                    <p>
+                      Monitoring Progress and making necessary adjustments along
+                      the way to help achieve overall Objectives 
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div id="proc-content-3">
+                <h4>Executive Committee</h4>
+                <div class="executive-row">
+                  <div class="executive-member">
+                    <img src="images/placeholders/photo.png" alt="" />
+                    <span class="name">John Doe</span>
+                    <span class="role">Executive Committee</span>
+                  </div>
+                  <div class="executive-member">
+                    <img src="images/placeholders/photo.png" alt="" />
+                    <span class="name">John Doe</span>
+                    <span class="role">Executive Committee</span>
+                  </div>
+                  <div class="executive-member">
+                    <img src="images/placeholders/photo.png" alt="" />
+                    <span class="name">John Doe</span>
+                    <span class="role">Executive Committee</span>
+                  </div>
+                  <div class="executive-member">
+                    <img src="images/placeholders/photo.png" alt="" />
+                    <span class="name">John Doe</span>
+                    <span class="role">Executive Committee</span>
+                  </div>
+                  <div class="executive-member">
+                    <img src="images/placeholders/photo.png" alt="" />
+                    <span class="name">John Doe</span>
+                    <span class="role">Executive Committee</span>
+                  </div>
+                </div>
+                <h5>Project Management Team</h5>
+                <div class="members-row">
+                  <div class="team-gray-bg">
+                    <h6>Project Delivery Team</h6>
+                    <div class="member-profile">
+                      <img src="images/placeholders/photo.png" alt="" />
+                      <div>
+                        <span>John Doe</span>
+                        <span>Manager, Supply Chain</span>
+                      </div>
+                    </div>
+                    <div class="member-profile">
+                      <img src="images/placeholders/photo.png" alt="" />
+                      <div>
+                        <span>John Doe</span>
+                        <span>Manager, Supply Chain</span>
+                      </div>
+                    </div>
+                    <div class="member-profile">
+                      <img src="images/placeholders/photo.png" alt="" />
+                      <div>
+                        <span>John Doe</span>
+                        <span>Manager, Supply Chain</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="team-gray-bg">
+                    <h6>Project Performance Leaders</h6>
+                    <div class="member-profile">
+                      <img src="images/placeholders/photo.png" alt="" />
+                      <div>
+                        <span>John Doe</span>
+                        <span>Manager, Supply Chain</span>
+                      </div>
+                    </div>
+                    <div class="member-profile">
+                      <img src="images/placeholders/photo.png" alt="" />
+                      <div>
+                        <span>John Doe</span>
+                        <span>Manager, Supply Chain</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="members-row">
+                  <div class="work">
+                    <h6>Work Stream</h6>
+                    <span>“Policies, Procedures and Governance”</span>
+                  </div>
+                  <div class="work">
+                    <h6>Work Stream</h6>
+                    <span>“Digital Landscape and Business Performance"</span>
+                  </div>
+                  <div class="work">
+                    <h6>Work Stream</h6>
+                    <span>“People Management and Business Alignment”</span>
+                  </div>
+                </div>
+              </div>
+
               <div id="proc-content-4"></div>
             </div>
           </div>
