Nav menu onclick

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <img src="images/symbol/caret-down.svg" alt="" />
           </button>
           <nav>
-            <a href="">About</a>
-            <a href="">Governance</a>
-            <a href="">Resources</a>
-            <a href="">Analytics</a>
-            <a href="">The Team</a>
-            <a href="">Trainings</a>
-            <a href="">Gallery</a>
-            <a href="">News</a>
-            <a href="">Procurement 4.0</a>
+            <a onclick="gotoSection('about-section')">About</a>
+            <a onclick="gotoSection('governance-section')">Governance</a>
+            <a onclick="gotoSection('resources-section')">Resources</a>
+            <a onclick="gotoSection('analytics-section')">Analytics</a>
+            <a onclick="gotoSection('the-team-section')">The Team</a>
+            <a onclick="gotoSection('trainings-section')">Trainings</a>
+            <a onclick="gotoSection('gallery-section')">Gallery</a>
+            <a onclick="gotoSection('news-section')">News</a>
+            <a onclick="gotoSection('procurement-section')">Procurement 4.0</a>
           </nav>
         </div>
       </div>
