Show event on calendar

--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@
       </div>
     </footer>
 
-    <script src="script.js" async defer></script>
-    <script src="populate-team.js" async defer></script>
-    <script src="calendar.js" async defer></script>
+    <script src="scripts/script.js" async defer></script>
+    <script src="scripts/populate-team.js" async defer></script>
+    <script src="scripts/calendar.js" async defer></script>
   </body>
 </html>
