Work stream upper half

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body>
     <header>
       <div class="main-width header-bar">
-        <img src="images/logo/white-logo.png" alt="" class="logo" />
+        <a onclick="window.scrollTo(0,0)">
+          <img src="images/logo/white-logo.png" alt="" class="logo" />
+        </a>
         <div class="nav-menu">
           <button class="nav-button">
             Global SCM Sharepoint
@@ -170,6 +172,15 @@
       <section class="analytics-section">
         <div class="main-width">
           <h2>Analytics</h2>
+          <!-- Paste the iframe code from Power BI here -->
+          <!-- <iframe
+            src="https://app.fabric.microsoft.com/view?r=eyJrIjoiMDRhMjkxMDItZmRlYy00YjMxLThlNDgtN2ExMWNlMDBlMGEwIiwidCI6ImY0ZDkxZGM1LWY0MzQtNDBkOC1iZjRhLWYwNTEzZTc0ZWE1NSIsImMiOjN9"
+            frameborder="0"
+          ></iframe> -->
+          <!-- ----------------------------------------------- -->
+          <!-- Placeholder dashboard screenshot image -->
+          <img src="images/placeholders/dashboard.jpg" alt="" />
+          <!-- --------------------------------------- -->
         </div>
       </section>
       <section class="the-team-section">
@@ -414,7 +425,68 @@
                 </div>
               </div>
 
-              <div id="proc-content-4"></div>
+              <div id="proc-content-4">
+                <div class="workstream-content">
+                  <div class="workstream-graphic">
+                    <div class="graph-bg">
+                      <img src="images/proc/vector-arrow.svg" alt="" />
+                      <img src="images/proc/vector-arrow.svg" alt="" />
+                      <img src="images/proc/vector-arrow.svg" alt="" />
+                    </div>
+                    <div id="stream-1-circle" class="stream-circle"></div>
+                    <div id="stream-2-circle" class="stream-circle"></div>
+                    <div id="stream-3-circle" class="stream-circle"></div>
+                    <div id="center-circle"></div>
+                  </div>
+                  <div class="workstream-list">
+                    <div id="stream-1" class="stream-item">
+                      <div>
+                        <h5>Work Stream</h5>
+                        <span>“Policies, Procedures and Governance”</span>
+                      </div>
+                      <div>
+                        <ol>
+                          <li>Compliance with Laws and Regulations</li>
+                          <li>Adaptation to Technological Changes</li>
+                          <li>Consistency and Effectiveness</li>
+                          <li>Risk Management</li>
+                          <li>Industry Best Practices</li>
+                        </ol>
+                      </div>
+                      <img src="images/symbol/chevron-right.svg" alt="" />
+                    </div>
+                    <div id="stream-2" class="stream-item">
+                      <div>
+                        <h5>Work Stream</h5>
+                        <span>“Policies, Procedures and Governance”</span>
+                      </div>
+                      <div>
+                        <ol>
+                          <li>Adaptation to Technological Changes</li>
+                          <li>Efficiency and Automation</li>
+                          <li>Realtime tracking and Updates</li>
+                          <li>Collaboration Enablement</li>
+                        </ol>
+                      </div>
+                      <img src="images/symbol/chevron-right.svg" alt="" />
+                    </div>
+                    <div id="stream-3" class="stream-item">
+                      <div>
+                        <h5>Work Stream</h5>
+                        <span>“People Management and Business Alignment”</span>
+                      </div>
+                      <div>
+                        <ol>
+                          <li>Upskilling and Training Needs</li>
+                          <li>Changes are informed and Communicated</li>
+                        </ol>
+                      </div>
+                      <img src="images/symbol/chevron-right.svg" alt="" />
+                    </div>
+                  </div>
+                </div>
+                <div></div>
+              </div>
             </div>
           </div>
         </div>
