--- a/index.html
+++ b/index.html
@@ -218,6 +218,41 @@
               <div class="cal-day">Sun</div>
             </div>
           </div>
+          <div class="event-popup">
+            <div id="event-info">
+              <h4>Procurement Training</h4>
+              <div class="organizer">
+                <img src="images/placeholders/photo.png" alt="" />
+                <div>
+                  <span class="organizer-name">Nur Habibah</span>
+                  <span>Organizer</span>
+                </div>
+              </div>
+              <span class="event-span">
+                <img src="images/symbol/calendar.svg" alt="" />
+                Tuesday, 8 May
+              </span>
+              <span class="event-span">
+                <img src="images/symbol/clock.svg" alt="" />
+                8.00 - 9.00 am
+              </span>
+            </div>
+            <div id="event-form">
+              <h5>Register</h5>
+              <div class="form-input">
+                <label for="register-name">Name</label>
+                <input type="text" name="register-name" id="register-name" />
+              </div>
+              <div class="form-input">
+                <label for="register-email">Email</label>
+                <input type="text" name="register-email" id="register-email" />
+              </div>
+              <button>Register</button>
+            </div>
+            <button id="close-popup">
+              <img src="images/symbol/x-shape.svg" alt="" />
+            </button>
+          </div>
         </div>
       </section>
       <section class="gallery-section">
