--- a/index.html
+++ b/index.html
@@ -520,7 +520,138 @@
                     </div>
                   </div>
                 </div>
-                <div></div>
+                <div id="stream-1-table" class="stream-table">
+                  <table>
+                    <tr>
+                      <th>No</th>
+                      <th>Project Deliverables</th>
+                      <th>Expectation</th>
+                      <th>Status</th>
+                      <th>Progress</th>
+                    </tr>
+                    <tr>
+                      <td>1</td>
+                      <td>Global Procurement & Supply Chain Policy</td>
+                      <td>Approved Policy document</td>
+                      <td>Ongoing</td>
+                      <td>80%</td>
+                    </tr>
+                    <tr>
+                      <td>2</td>
+                      <td>Global Procurement Procedures</td>
+                      <td>
+                        Review current Procedures to reflect current business
+                        practices
+                      </td>
+                      <td>Ongoing</td>
+                      <td>70%</td>
+                    </tr>
+                    <tr>
+                      <td>3</td>
+                      <td>Terms and Conditions</td>
+                      <td>
+                        Develop Standard Terms and Conditions fit for Mubadala
+                        Energy requirement and align with global oil and gas
+                        industry practices
+                      </td>
+                      <td>Ongoing</td>
+                      <td>50%</td>
+                    </tr>
+                  </table>
+                </div>
+                <div id="stream-2-table" class="stream-table">
+                  <table>
+                    <tr>
+                      <th>No</th>
+                      <th>Project Deliverables</th>
+                      <th>Expectation</th>
+                      <th>Status</th>
+                      <th>Progress</th>
+                    </tr>
+                    <tr>
+                      <td>1</td>
+                      <td>Global Procurement & Supply Chain Policy</td>
+                      <td>Approved Policy document</td>
+                      <td>Ongoing</td>
+                      <td>80%</td>
+                    </tr>
+                    <tr>
+                      <td>2</td>
+                      <td>Supplier Registration (Website)</td>
+                      <td>
+                        Deliver the Model to implement Supplier Registration
+                        portal on Mubadala Energy website
+                      </td>
+                      <td>Ongoing</td>
+                      <td>70%</td>
+                    </tr>
+                    <tr>
+                      <td>3</td>
+                      <td>eProcurement</td>
+                      <td>
+                        Improve and utilize the eProcurement solution for all
+                        SCM related activities
+                      </td>
+                      <td>Ongoing</td>
+                      <td>50%</td>
+                    </tr>
+                    <tr>
+                      <td>4</td>
+                      <td>Cloud Solutions</td>
+                      <td>
+                        Explore the option for a potential implementation of
+                        Cloud Solution (e.g. Remote Approvals of Submission)
+                      </td>
+                      <td>Ongoing</td>
+                      <td>30%</td>
+                    </tr>
+                    <tr>
+                      <td>5</td>
+                      <td>
+                        Objective and Key Results and Performance Indicator
+                        (Dashboard)
+                      </td>
+                      <td>
+                        <ul>
+                          <li>
+                            Introduce Performance Indicator Dashboard for SCM
+                          </li>
+                          <li>Introduce OKR Dashboard for SCM</li>
+                        </ul>
+                      </td>
+                      <td>Ongoing</td>
+                      <td>50%</td>
+                    </tr>
+                  </table>
+                </div>
+                <div id="stream-3-table" class="stream-table">
+                  <table>
+                    <tr>
+                      <th>No</th>
+                      <th>Project Deliverables</th>
+                      <th>Expectation</th>
+                      <th>Status</th>
+                      <th>Progress</th>
+                    </tr>
+                    <tr>
+                      <td>1</td>
+                      <td>Global Procurement & Supply Chain Policy</td>
+                      <td>Approved Policy document</td>
+                      <td>Ongoing</td>
+                      <td>80%</td>
+                    </tr>
+                    <tr>
+                      <td>2</td>
+                      <td>Global Procurement Procedures</td>
+                      <td>
+                        Review current Procedures to reflect current business
+                        practices
+                      </td>
+                      <td>Ongoing</td>
+                      <td>70%</td>
+                    </tr>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
