--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
       </div>
     </footer>
 
-    <script src="scripts/script.js" async defer></script>
+    <script src="scripts/script.js"></script>
     <script src="scripts/populate-team.js" async defer></script>
     <script src="scripts/calendar.js" async defer></script>
   </body>
