Add links, fix menu button

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
           <img src="images/logo/white-logo.png" alt="" class="logo" />
         </a>
         <div class="nav-menu">
-          <button class="nav-button">
+          <a class="nav-button">
             Global SCM Sharepoint
             <img src="images/symbol/caret-down.svg" alt="" />
-          </button>
-          <nav>
+          </a>
+          <nav class="hide">
             <a onclick="gotoSection('about-section')">About</a>
             <a onclick="gotoSection('governance-section')">Governance</a>
             <a onclick="gotoSection('resources-section')">Resources</a>
@@ -123,37 +123,67 @@
         <div class="pie-container">
           <div class="circle"></div>
           <div class="center">Governance</div>
-          <a class="slice" id="slice-1">
+          <a
+            class="slice"
+            id="slice-1"
+            href="https://mubadalaenergy.sharepoint.com/sites/PSCM/Procedures"
+            target="_blank"
+          >
             <div class="slice-text">
               <img src="images/gov/procedure.png" alt="" />
               Procedures
             </div>
           </a>
-          <a class="slice" id="slice-2">
+          <a
+            class="slice"
+            id="slice-2"
+            href="https://mubadalaenergy.sharepoint.com/sites/PSCM/Processes"
+            target="_blank"
+          >
             <div class="slice-text">
               <img src="images/gov/process.png" alt="" />
               Processes
             </div>
           </a>
-          <a class="slice" id="slice-3">
+          <a
+            class="slice"
+            id="slice-3"
+            href="https://mubadalaenergy.sharepoint.com/sites/PSCM/Processes/CGC"
+            target="_blank"
+          >
             <div class="slice-text">
               <img src="images/gov/contract.png" alt="" />
               Contract Governance Committee
             </div>
           </a>
-          <a class="slice" id="slice-4">
+          <a
+            class="slice"
+            id="slice-4"
+            href="https://mubadalaenergy.sharepoint.com/sites/PSCM/Global%20Procurement%20Plan"
+            target="_blank"
+          >
             <div class="slice-text">
               <img src="images/gov/plan.png" alt="" />
               Procurement Planning
             </div>
           </a>
-          <a class="slice" id="slice-5">
+          <a
+            class="slice"
+            id="slice-5"
+            href="https://mubadalaenergy.sharepoint.com/sites/PSCM/FDP"
+            target="_blank"
+          >
             <div class="slice-text">
               <img src="images/gov/fdp.png" alt="" />
               FDP
             </div>
           </a>
-          <a class="slice" id="slice-6">
+          <a
+            class="slice"
+            id="slice-6"
+            href="https://mubadalaenergy.sharepoint.com/sites/PSCM/CorporatePolicy"
+            target="_blank"
+          >
             <div class="slice-text">
               <img src="images/gov/policy.png" alt="" />
               Policy
